<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/month_year"
        style="@style/BoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/month_year_padding"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/month_year_padding"
        android:textColor="@color/blue"
        android:textSize="@dimen/month_year_text_size"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/month_year_holder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/competition"
        style="@style/BoldText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@id/side_barrier"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/month_year"
        tools:text="@string/competition_holder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/place_date"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toStartOf="@id/side_barrier"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/competition"
        tools:text="@string/place_date_holder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:gravity="center"
        android:paddingStart="@dimen/small_margin"
        android:paddingEnd="@dimen/small_margin"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/state_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/place_date"
        app:layout_constraintStart_toEndOf="@id/side_barrier"
        app:layout_constraintTop_toTopOf="@id/competition"
        tools:text="@string/state_holder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_team"
        style="@style/BoldText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/away_team"
        app:layout_constraintEnd_toStartOf="@id/side_barrier"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/place_date"
        tools:text="@string/home_team_holder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/away_team"
        style="@style/BoldText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/side_barrier"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/home_team"
        tools:text="@string/away_team_holder" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/side_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="start"
        app:constraint_referenced_ids="day_name,day_number" />

    <View
        android:id="@+id/divider"
        android:layout_width="@dimen/line"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/day_number"
        app:layout_constraintStart_toEndOf="@id/home_team"
        app:layout_constraintTop_toBottomOf="@id/place_date" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/day_number"
        android:layout_width="@dimen/right_space"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="@dimen/day_text_size"
        app:layout_constraintBottom_toTopOf="@id/day_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/side_barrier"
        app:layout_constraintTop_toBottomOf="@+id/place_date"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/day_number_holder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/day_name"
        style="@style/RegularText"
        android:layout_width="@dimen/right_space"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/side_barrier"
        app:layout_constraintTop_toBottomOf="@id/day_number"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/day_name_holder" />

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>